# parity-signer

./: 404.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: actions.yml  android-app.yml  docs.yml  rust-cargo-deny.yml  rust-clippy.yml  rust-fmt.yml  rust-test-android.yml  rust-test-ios.yml
about/: Changelog.html  FAQ.html  Security-And-Privacy.html
development/: Build.html  Development.html  Ecosystem.html  Rustdocs.html  Signer-Structure.html  Troubleshooting.html  UOS.html
ios/NativeSigner/: Address.swift  signer.h
ios/NativeSigner.xcodeproj/: project.pbxproj
rust/db_handling/: Cargo.toml
rust/defaults/: Cargo.toml
rust/definitions/: Cargo.toml
rust/definitions/src/: error_signer.rs  keyring.rs  test_all_errors_signer.rs
rust/generate_message/: Cargo.toml
rust/navigator/: Cargo.toml
rust/parser/: Cargo.toml
rust/parser/src/: lib.rs  (+6 more)
rust/qr_reader_phone/: Cargo.toml
rust/qrcode_rtx/: Cargo.toml
rust/qrcode_rtx/src/: lib.rs
rust/qrcode_static/: Cargo.toml
rust/signer/: Cargo.toml
rust/transaction_parsing/: Cargo.toml
rust/transaction_signing/: Cargo.toml
rustdocs/: search-index.js  settings.html  source-files.js
rustdocs/constants/: all.html  constant.ADDRESS_BOOK.html  constant.ADDRTREE.html  constant.ALICE_SEED_PHRASE.html  constant.BACK_COLOR.html  constant.BORDER.html  constant.CHUNK_SIZE.html  constant.COLD_DB_NAME_RELEASE.html  constant.COLOR.html  constant.DANGER.html  constant.DRV.html  constant.EXPORT_FOLDER.html  constant.FOLDER.html  constant.FPS_DEN.html  constant.FPS_NOM.html  constant.GENERALVERIFIER.html  constant.HISTORY.html  constant.HISTORY_PAGE_SIZE.html  constant.HOT_DB_NAME.html  constant.MAIN_COLOR.html  constant.MAX_WORDS_DISPLAY.html  constant.METATREE.html  constant.META_HISTORY.html  constant.SCALING.html  constant.SECONDARY_COLOR.html  constant.SETTREE.html  constant.SIGN.html  constant.SPECSTREE.html  constant.SPECSTREEPREP.html  constant.STUB.html  constant.TRANSACTION.html  constant.TYPES.html  constant.VERIFIERS.html  fn.add_specs.html  fn.load_metadata.html  fn.load_types.html  fn.qr_palette.html  index.html  sidebar-items.js
rustdocs/db_handling/: all.html  fn.default_cold_release.html  fn.default_hot.html  index.html  sidebar-items.js
rustdocs/defaults/: all.html  constant.DEFAULT_VERIFIER_PUBLIC.html  fn.default_address_book.html  fn.default_chainspecs.html  fn.default_chainspecs_to_send.html  fn.default_general_verifier.html  fn.default_types_content.html  fn.default_types_vec.html  fn.default_verifiers.html  fn.nav_test_metadata.html  fn.release_metadata.html  fn.test_metadata.html  index.html  sidebar-items.js
rustdocs/definitions/: all.html  index.html  sidebar-items.js
rustdocs/generate_message/: all.html  fn.full_run.html  index.html  sidebar-items.js
rustdocs/navigator/: all.html  enum.Action.html  fn.do_action.html  fn.init_navigation.html  fn.update_seed_names.html  index.html  sidebar-items.js  struct.STATE.html
rustdocs/parser/: all.html  enum.MetadataBundle.html  fn.cut_method_extensions.html  fn.parse_and_display_set.html  fn.parse_extensions.html  fn.parse_method.html  fn.parse_set.html  index.html  sidebar-items.js
rustdocs/printing_balance/: all.html  fn.convert_balance_pretty.html  fn.print_pretty_test.html  index.html  sidebar-items.js  struct.PrettyOutput.html
rustdocs/qr_reader_pc/: all.html  fn.arg_parser.html  fn.process_qr_image.html  fn.run_with_camera.html  index.html  sidebar-items.js  struct.CameraSettings.html
rustdocs/qr_reader_phone/: all.html  fn.decode_sequence.html  fn.get_length.html  fn.get_payload.html  index.html  sidebar-items.js
rustdocs/qrcode_rtx/: all.html  fn.make_pretty_qr.html  index.html  sidebar-items.js
rustdocs/qrcode_static/: all.html  fn.png_qr.html  fn.png_qr_from_hex.html  fn.png_qr_from_string.html  index.html  sidebar-items.js
rustdocs/signer/: all.html  enum.ErrorDisplayed.html  fn.ffi_signer_e31b_rustbuffer_alloc.html  fn.ffi_signer_e31b_rustbuffer_free.html  fn.ffi_signer_e31b_rustbuffer_from_bytes.html  fn.ffi_signer_e31b_rustbuffer_reserve.html  fn.signer_destroy_string.html  index.html  macro.uniffi_reexport_scaffolding.html  sidebar-items.js
tutorials/: Add-New-Network.html  Hierarchical-Deterministic-Key-Derivation.html  Kusama-tutorial.html  Recover-Account-Polkadotjs.html  SUMMARY.html  Start.html  Upgrading.html
(+593 files in other folders)
