[package]
name = "db_handling"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2-rfc = "0.2.18"
chrono = "0.4.19"
constants = {path = "../constants"}
defaults = {path = "../defaults"}
definitions = {path = "../definitions"}
hex = "0.4.3"
lazy_static = "1.4.0"
parity-scale-codec = {version = "3.0.0", features = ["derive"]}
parity-scale-codec-derive = "3.0.0"
plot_icon = "0.1.3"
png = "0.16.8"
qrcode_static = {path = "../qrcode_static"}
regex = "1.4.5"
sled = "0.34.6"
sp-core = {version = "5.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = "5.0.0"
tiny-bip39 = { version = "0.8.0", default-features = false }
zeroize = "1.5.2"

[lib]
name = "db_handling"
crate-type = ["lib"]
