[package]
name = "defaults"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definitions = {path = "../definitions"}
hex = "0.4.3"
lazy_static = "1.4.0"
regex = "1.5.4"
sp-core = {version = "5.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = "5.0.0"

[lib]
name = "defaults"
crate-type = ["lib"]
