[package]
name = "definitions"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
blake2-rfc = "0.2.18"
constants = {path = "../constants"}
frame-metadata = { version = "15.0.0", default-features = false, features = ["v14", "legacy"]}
hex = "0.4.3"
lazy_static = "1.4.0"
parity-scale-codec = {version = "3.0.0"}
parity-scale-codec-derive = "3.0.0"
plot_icon = "0.1.3"
png = "0.16.8"
regex = "1.5.4"
sled = "0.34.6"
sp-core = {version = "5.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = "5.0.0"
sp-version = "4.0.0"
#wasm-testbed = "0.13.1"

[lib]
name = "definitions"
crate-type = ["lib"]
