[package]
name = "qrcode_rtx"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apng-encoder = "0.3.0"
constants = {path = "../constants"}
hex = "0.4.3"
qrcodegen = "1.6.0"
qrcode_static = {path = "../qrcode_static"}
raptorq = "1.6.4"

[lib]
name = "qrcode_rtx"
crate-type = ["lib"]
