[package]
name = "transaction_parsing"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.0"
blake2-rfc = "0.2.18"
constants = {path = "../constants"}
db_handling = {path = "../db_handling"}
definitions = {path = "../definitions"}
frame-metadata = { version = "15.0.0", default-features = false, features = ["v14", "legacy"]}
hex = "0.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
parity-scale-codec = {version = "3.0.0", features = ["derive", "bit-vec"]}
parity-scale-codec-derive = "3.0.0"
parser = {path = "../parser"}
plot_icon = "0.1.3"
printing_balance = {path = "../printing_balance"}
regex = "1.4.5"
scale-info = "2.0.1"
sled = "0.34.6"
sp-arithmetic = "4.0.0"
sp-core = {version = "5.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = "5.0.0"


[lib]
name = "transaction_parsing"
crate-type = ["lib"]
