[package]
name = "transaction_signing"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2-rfc = "0.2.18"
constants = {path = "../constants"}
definitions = {path = "../definitions"}
db_handling = {path = "../db_handling"}
hex = "0.4.3"
parity-scale-codec = "3.0.0"
qrcode_static = {path = "../qrcode_static"}
sled = "0.34.6"
sp-core = {version = "5.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = "5.0.0"
transaction_parsing = {path = "../transaction_parsing"}
zeroize = "1.5.2"


[lib]
name = "transaction_signing"
crate-type = ["lib"]
